# x86Launcher

./: CMakeLists.txt  L.BAT  Makefile.djgpp  README.md  launcher.ini
scripts/: convert_fli.py  fade_wav.py  make_fli.py  make_preview.py  make_theme.py
src/: bmp.c  bmp.h  data.c  data.h  filter.c  fli.c  fli.h  fstools.c  fstools.h  gfx.c  gfx.h  ini.c  input.c  input.h  main.c  main.h  palette.c  sb.c  sb.h  timers.h  ui.c  ui.h  vesa.c  vesa.h  watcom_compat.h
